<resources>
    <string name="app_name">wget</string>
    <string name="button_run">Run!</string>
    <string name="button_edit">Edit</string>
    <string name="command_name_version">version</string>
    <string name="command_explanation_version">Display the version of Wget.</string>
    <string name="title_activity_command">CommandActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="menu_create_new_command">new command</string>
    <string name="title_activity_configuration">Configuration</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="command_name_continue">continue</string>
    <string name="command_explanation_continue">Continue getting a partially-downloaded file. This is useful when you want to finish up a download started by a previous instance of Wget, or by another program.</string>
    <string name="command_name_recursive">recursive</string>
    <string name="command_explanation_recursive">Turn on recursive retrieving. The default maximum depth is 5.</string>
    <string name="command_name_mirror">mirror</string>
    <string name="command_explanation_mirror">Turn on options suitable for mirroring. This option turns on recursion and time-stamping, sets infinite recursion depth and keeps FTP directory listings. It is currently equivalent to -r -N -l inf --no-remove-listing.</string>
    <string name="command_result">Execution Result:</string>
    <string name="command_result_0">No problems occurred.</string>
    <string name="command_result_1">Generic error code.</string>
    <string name="command_result_2">Parse error - for instance, when parsing command-line options, the .wgetrc or .netrc...</string>
    <string name="command_result_3">File I/O error.</string>
    <string name="command_result_4">Network failure.</string>
    <string name="command_result_5">SSL verification failure. See https://github.com/niccokunzmann/wget-app/issues/4</string>
    <string name="command_result_6">Username/password authentication failure.</string>
    <string name="command_result_7">Protocol errors.</string>
    <string name="command_result_8">Server issued an error response.</string>
    <string name="command_result_unkonwn">Wget returned an undocumented error code.</string>
    <string name="command_result_running">The process is still running.</string>
    <string name="command_name_debug">debug</string>
    <string name="command_explanation_debug">Turn on debug output, meaning various information important to the developers of Wget if it does not work properly. Your system administrator may have chosen to compile Wget without debug support, in which case -d will not work. Please note that compiling with debug support is always safe---Wget compiled with the debug support will not print any debug info unless requested with -d.</string>
    <string name="command_name_output_document">output document</string>
    <string name="command_explanation_output_document">The documents will not be written to the appropriate files, but all will be concatenated together and written to file. If - is used as file, documents will be printed to standard output, disabling link conversion. (Use ./- to print to a file literally named -.)</string>
    <string name="error_io_exception_start">There was an IO error when the command was started.</string>
    <string name="error_io_exception_output">There was an error getting the output of the process.</string>
    <string name="section_title_startup">Basic Startup Options</string>
    <string name="command_name_help">help</string>
    <string name="command_explanation_help">Print a help message describing all of Wget\'s command-line options.</string>
    <string name="section_title_download">Download Options</string>
    <string name="command_name_tries">Tries</string>
    <string name="command_explanation_tries">Set number of tries to number. Specify 0 or inf for infinite retrying. The default is to retry 20 times, with the exception of fatal errors like \"connection refused\" or \"not found\" (404), which are not retried.</string>
    <string name="section_title_recursive">Recursive Retrieval Options</string>
    <string name="command_name_depth">depth</string>
    <string name="command_explanation_depth">Specify recursion maximum depth level depth.</string>
    <string name="invalid_option">The app has an error and displays an invalid option here.</string>
    <string name="url_hint">http://www.gnu.org</string>
    <string name="choose_a_file">Choose a File</string>
    <string name="option_output">app</string>
    <string name="command_name_directory_prefix">directory prefix</string>
    <string name="command_explanation_directory_prefix">Set directory prefix to prefix. The directory prefix is the directory where all other files and subdirectories will be saved to, i.e. the top of the retrieval tree. The default is . (the Downloads directory).</string>
    <string name="section_title_directory">Directory Options</string>
    <string name="section_title_favorite">Popular Options</string>
    <string name="choose_a_directory">Choose a Directory</string>
    <string name="directory_downloads">Downloads</string>
    <string name="invite_to_install_io_file_manager">You can choose directories using the IO Filemanager. Please download and install it to use this functionality.</string>
    <string name="explain_permission">In order for this command to work, we need permission to access parts of your device.</string>
    <string name="waiting_for_permissions">The execution of the command is deferred until the permissions are reviwed by the user.</string>
    <string name="command_name_output_file">log file</string>
    <string name="command_explanation_output_file">Log all messages to logfile. The messages are normally reported to standard error. With /proc/self/fd/1, you can read the log in this app.</string>
    <string name="command_name_append_output">append output</string>
</resources>